--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,7 +1,7 @@
 hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vsco.co, *.amemv.com, account.wps.cn, account.wps.com, biz.caiyunapp.com, ap*.intsig.net, api.vuevideo.net, api.picsart.c*, api.meiease.c*, trade-acs.m.taobao.com, api.m.jd.com, ios-h2.prod.ftl.netflix.com, api.rr.tv, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, license.pdfexpert.com, testflight.apple.com
 
 
-# Weibo (By yichahucha)0
+# Weibo (By yichahucha)
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Wb_launch.js
 ^https?://m?api.weibo.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Wb_ad.js
 
