--- a/Rewrite/Rewrite_youtubeads.conf
+++ b/Rewrite/Rewrite_youtubeads.conf
@@ -1,4 +1,4 @@
-hostname = *.googlevideo.com,www.youtube.com,s.youtube.com00
+hostname = *.googlevideo.com,www.youtube.com,s.youtube.com
 
 (^https?:\/\/(?!redirector)[\w-]+\.googlevideo\.com\/((?!dclk_video_ads).)+)(ctier=L)(&.+) url 302 $1$3
 ^https?:\/\/[\w-]+\.googlevideo\.com\/((?!(dclk_video_ads|videoplayback)).)+&(oad|ctier) url reject
