--- a/Rewrite/Turn-Off-Google-Safesearch.conf
+++ b/Rewrite/Turn-Off-Google-Safesearch.conf
@@ -1,5 +1,5 @@
 # Turn Off Google Safesearch(Beta)
-# 关闭Google安全搜索。第二条用于被 Google 识别成中国大陆，也就是访问不了 https://www.google.com/maps/timeline 的 IP。桌面端请使用 https://google.com/ncr。
+# 主要用于解决被 Google 识别成中国大陆(即访问不了 https://www.google.com/maps/timeline)的节点导致谷歌香港安全搜索锁死的问题。桌面端请使用 https://google.com/ncr。
 
 hostname = www.google.com,www.google.com.*
 
