--- a/Rewrite/QuantumultX_Profiles.conf
+++ b/Rewrite/QuantumultX_Profiles.conf
@@ -254,6 +254,7 @@ final, 终极清单
 
 
 -------------------------------------------------------------------------------------------------------
+
 # DivineEngine Quantumult 配置示例
 #
 # 以 ";" 或 "#" 或 "//" 开头的行为注释行。
@@ -343,6 +344,12 @@ address=/mtalk.google.com/108.177.125.188
 # Google Dl
 server=/dl.google.com/119.29.29.29
 server=/dl.l.google.com/119.29.29.29
+
+# TP-Link
+server=/tplogin.cn/system
+server=/tplinklogin.net/system
+server=/melogin.cn/system
+server=/falogin.cn/system
 
 ;server=8.8.4.4:53
 ;server=/example0.com/system
