--- a/Rewrite/General.conf
+++ b/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn,api.abema.io, app.biliintl.com,passport.biliintl.com,*.wikipedia.org,*.wikiwand.com
+hostname = www.google.cn,www.firefox.com.cn,api.abema.io, app.biliintl.com,passport.biliintl.com,*.wikipedia.org,*.wikiwand.com
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -15,10 +15,14 @@ hostname = www.google.cn,api.abema.io, app.biliintl.com,passport.biliintl.com,*.
 ^https?:\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
 
 # Redirect False to True
+# > Firefox - www.firefox.com.cn
+^https?:\/\/(www.)?firefox\.com\.cn\/(download\/)?$ url 302 https://www.mozilla.org/zh-CN/firefox/new/
 # > IGN China to IGN Global
 ^https?:\/\/(www.)?ign\.xn--fiqs8s\/ url 302 http://cn.ign.com/ccpref/us
 # > Fake Website Made By C&J Marketing
 ^https?:\/\/(www.)?abbyychina\.com\/ url 302 https://www.abbyy.cn/
+^https?:\/\/(www.)?alienskins\.cn\/ url 302 https://exposure.software/
+^https?:\/\/(www.)?anydeskchina\.cn\/ url 302 https://anydesk.com/zhs
 ^https?:\/\/(www.)?bartender\.cc\/ url 302 https://www.macbartender.com/
 ^https?:\/\/(www.)?(betterzipcn|betterzip)\.(com|net)\/ url 302 https://macitbetter.com/
 ^https?:\/\/(www.)?beyondcompare\.cc\/ url 302 https://www.scootersoftware.com/
@@ -32,9 +36,11 @@ hostname = www.google.cn,api.abema.io, app.biliintl.com,passport.biliintl.com,*.
 ^https?:\/\/(www.)?easyrecoverychina\.com\/ url 302 https://www.ontrack.com/
 ^https?:\/\/(www.)?ediuschina\.com\/ url 302 https://www.grassvalley.com/
 ^https?:\/\/(www.)?flstudiochina\.com\/ url 302 https://www.image-line.com/
+^https?:\/\/(www.)?folxchina\.cn\/ url 302 https://mac.eltima.com/cn/download-manager.html
 ^https?:\/\/(www.)?formysql\.com\/ url 302 https://www.navicat.com.cn/
 ^https?:\/\/(www.)?guitarpro\.cc\/ url 302 https://www.guitar-pro.com/
 ^https?:\/\/(www.)?huishenghuiying\.com\.cn\/ url 302 https://www.coreldraw.com/cn/
+^https?:\/\/(www.)?hypeapp\.cn\/ url 302 https://tumult.com/hype/
 ^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.hyperionics.com/
 ^https?:\/\/(www.)?iconworkshop\.cn\/ url 302 https://www.axialis.com/
 ^https?:\/\/(www.)?idmchina\.net\/ url 302 https://www.internetdownloadmanager.com/
